trunk/Archive2/7e/879cd81f26e49e/output
main.cpp:5:1: error: static assertion failed: Jabberwocky is killing user.
 static_assert(std::is_same<int const&,int_ref const&&>(), "Jabberwocky is killing user.");
 ^
